--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.5.0
+  flutter_bloc: ^9.1.1
+  shared_preferences: ^2.5.3
+  flutter_secure_storage: ^9.2.4
+  sqflite: ^2.4.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
