--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,13 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   sqflite: ^2.4.2
   path: ^1.9.1
+  lottie: ^3.3.2
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/icon/stocksip_icon.jpg
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +32,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/stocksip_logo.png
+    - assets/lottie/stocksip_splash.json
