--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   lottie: ^3.3.2
   flutter_launcher_icons: ^0.14.4
   image_picker: ^1.2.1
+  cached_network_image: ^3.4.1
 
 flutter_launcher_icons:
   android: true
